modifying config.json

--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -1,4 +1,4 @@
-body{
-    background-color: aqua;
-    font-family: 'Courier New', Courier, monospace;
+body {
+  background-color: aqua;
+  font-family: "Courier New", Courier, monospace;
 }
