--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -2,22 +2,14 @@
     <head>
       <link href="./css/styles.css" rel="stylesheet">  
     </head>
- <body>
     <%- include('header.ejs') %>
 
-    <table>
-        <% for(var i =0; i < allTodos.length; i++){%>
-        <tr>
-            <td>
-                <%= allTodos[i].title %>
-            </td>
-        </tr>
-        <% } %>
-        <tr>
-            <td>
-            
-            </td>
-        </tr>
-    </table>
- </body> 
+    <body>
+    
+    <%-include('todos.ejs') %>
+    </body>
+
+    <%-include('footer.ejs') %>
+
 </html>
+ 
