--- a/todo-app/public/css/styles.css
+++ b/todo-app/public/css/styles.css
@@ -1,4 +1,8 @@
 body {
-  background-color: aqua;
+  background-color: white;
   font-family: "Courier New", Courier, monospace;
 }
+.Todo-Item:hover .trash-icon{
+  display: block;
+}
+
