--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -21,11 +21,12 @@
           </div> 
         </div>
          </form>
+         
          </div>
          </div>
-      <%- include('todos.ejs',{header1:"Overdue" , data : overduelist,id1:"count-overdue"}) %>
-      <%- include('todos.ejs',{header1:"Due Today" , data : duetodaylist,id1:"count-due-today"}) %>
-      <%- include('todos.ejs',{header1:"Due Later" , data : duelaterlist,id1:"count-due-later"}) %>
+      <%- include('todos.ejs',{title:"Overdue" , data : overduelist,id1:"count-overdue"}) %>
+      <%- include('todos.ejs',{title:"Due Today" , data : duetodaylist,id1:"count-due-today"}) %>
+      <%- include('todos.ejs',{title:"Due Later" , data : duelaterlist,id1:"count-due-later"}) %>
     </body>
 </html>
  
