--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -23,9 +23,9 @@
            
         </div>
          </form>
-         <%- include('todos.ejs',{title:"Overdue" , data : overduelist,id1:"count-overdue"}) %>
-         <%- include('todos.ejs',{title:"Due Today" , data : duetodaylist,id1:"count-due-today"}) %>
-         <%- include('todos.ejs',{title:"Due Later" , data : duelaterlist,id1:"count-due-later"}) %>
+         <%- include('todos.ejs',{title:'Overdue' , data : overduelist,id1:"count-overdue"}) %>
+         <%- include('todos.ejs',{title:'Due Today' , data : duetodaylist,id1:"count-due-today"}) %>
+         <%- include('todos.ejs',{title:'Due Later' , data : duelaterlist,id1:"count-due-later"}) %>
          
          </div>
          </div>
