--- a/todo-app/views/todos.ejs
+++ b/todo-app/views/todos.ejs
@@ -8,11 +8,9 @@
     
 
     <body>
+      <span class="bg-gray-100 text-gray-800 text-sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-gray-900 justify-center items-center items" style="float:right" id='<%=id1 %>'><%= data.length %></span>
         <h5>
-            <%= title %> <span
-            class="bg-gray-100 text-gray-800 text-sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-gray-900 justify-center items-center items">
-            <%= data.length %>
-          </span>
+            <%=title%> 
         </h5> 
         <ul class="list-none">
           <% for(var i=0;i<data.length;i++){ %>
