add deleting capability

--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -3,6 +3,35 @@
       <link href="./css/styles.css" rel="stylesheet">
       <script src="https://cdn.tailwindcss.com"></script> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.15/tailwind.min.css"> 
+      <script>
+        function updateTodo(id){
+          fetch(`/todos/${id}/markAsCompleted`,{
+            method: "put",
+            headers: { "Content-Type": "application/json"},
+          })
+          .then((res) => {
+            if(res.ok){
+              window.location.relod();
+            }
+          })
+          .catch((err) => console(err));
+        
+        }
+       function deleteTodo(id){
+        fetch(`/todos/${id}`,{
+          method:"delete",
+          headers: {"Content-Type":"application/json"},
+
+        })
+        .then((res) =>{
+          if(res.ok){
+            window.location.reload();
+          }
+        })
+        .catch((err) => console.error(err));
+       }
+
+      </script>
     </head>
     <body>
       <div class="grid grid-cols-6">
