added completed items in index.ejs

--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -66,6 +66,7 @@
          <%- include('todos.ejs',{title:'Overdue' , data : overduelist,id1:"count-overdue"}) %>
          <%- include('todos.ejs',{title:'Due Today' , data : duetodaylist,id1:"count-due-today"}) %>
          <%- include('todos.ejs',{title:'Due Later' , data : duelaterlist,id1:"count-due-later"}) %>
+         <%- include('todos.ejs',{title:'Completed Items' , data : complete,id1:"count-completed-items"}) %>
          
          </div>
          </div>
