fixing level-10 tests

--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -4,73 +4,16 @@
       <link href="./css/styles.css" rel="stylesheet">
       <script src="https://cdn.tailwindcss.com"></script> 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.15/tailwind.min.css"> 
-      <script>
-        var token=document.querySelector('meta[name=csrf-token]').getAttribute("content");
-        function updateTodo(id){
-          const b=document.querySelector(`#todo-checkbox-${id}`).checked
-          fetch(`/todos/${id}`,{
-            method: "put",
-            headers: { "Content-Type": "application/json"},
-            body:JSON.stringify({
-              "_csrf":token,
-              completed:b
-            })
-          })
-          .then((res) => {
-            if(res.ok){
-              window.location.reload();
-            }
-          })
-          .catch((err) => console.error(err));
-        
-        }
-       function deleteTodo(id){
-        fetch(`/todos/${id}`,{
-          method:"delete",
-          headers: {"Content-Type":"application/json"},
-          body:JSON.stringify({
-              "_csrf":token
-            })
-
-        })
-        .then((res) =>{
-          if(res.ok){
-            window.location.reload();
-          }
-        })
-        .catch((err) => console.error(err));
-       }
-
-      </script>
     </head>
     <body>
       <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
          <%- include('header.ejs')%>
-         <form action="/todos" method="post" onsubmit="validate()">
-          <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
-          <div class="flex gap-2 py-4">
-            <div class="flex-auto">
-              <input type="text"  pattern ="^[a-z].*$" name="title" placeholder="what's next?" class="border border-gray-300 rounded text-gray-900 text-sm w-full p-2" required/>
-            </div>
-          <div class="flex-auto">
-            <input type="date" name="dueDate" class="border border-gray-300 rounded text-gray-900 text-medium w-full p-2 leading-4" required/>
-          </div>
-          <div class="flex-none">
-            <button type="submit" class="bg-green-600 text-white px-5 py-2 rounded font-medium px-5 py-2 ">Add</button>
-          </div> 
-         
-           
-        </div>
-         </form>
-         <%- include('todos.ejs',{title:'Overdue' , data : overduelist,id1:"count-overdue"}) %>
-         <%- include('todos.ejs',{title:'Due Today' , data : duetodaylist,id1:"count-due-today"}) %>
-         <%- include('todos.ejs',{title:'Due Later' , data : duelaterlist,id1:"count-due-later"}) %>
-         <%- include('todos.ejs',{title:'Completed Items' , data : complete,id1:"count-completed-items"}) %>
-         
+         <p class="py-2">Welcome to the TO-DO manager</p>
+         <p class="py-2">New here?<a href="/signup" class="text-green-600">Sign-up now</a></p>
+         <p class="py-2">Already have an account?<a href="/login" class="text-green-600">Sign-in</a></p>
          </div>
          </div>
-      
     </body>
 </html>
  
