--- a/todo-app/views/signup.ejs
+++ b/todo-app/views/signup.ejs
@@ -15,6 +15,13 @@
                <h6 class="py-8">
                  Signup as a new user
                </h6>
+               <div>
+                <% if(messages && messages.error && messages.error.length > 0)  { %>
+                    <% for(var i=0; i<messages.error.length; i++) { %>
+                            <li> <%= messages.error[i] %></li>
+                    <% } %>
+                  <% } %>
+               </div>
                <form action="/users" method="post">
                 <input type="hidden" name="_csrf" value="<%=csrfToken %>">
                 <div class="py-3">
