--- a/todo-app/views/todo.ejs
+++ b/todo-app/views/todo.ejs
@@ -52,7 +52,7 @@
           <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
           <div class="flex gap-2 py-4">
             <div class="flex-auto">
-              <input type="text" minlength="5" pattern ="^[a-z].*$" name="title" placeholder="what's next?" class="border border-gray-300 rounded text-gray-900 text-sm w-full p-2" required/>
+              <input type="text" minlength="5" pattern ="^[a-zA-Z\s]+$" name="title" placeholder="what's next?" class="border border-gray-300 rounded text-gray-900 text-sm w-full p-2" required/>
             </div>
           <div class="flex-auto">
             <input type="date" name="dueDate" class="border border-gray-300 rounded text-gray-900 text-medium w-full p-2 leading-4" required/>
